add html structure for the middle part

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Website design</title>
 </head>
 
-<body>
+<body class="body">
     <div class="container">
 
         <div id="card1">
@@ -21,18 +21,28 @@
 
         </div>
 
+        <div id="card2">
+
+            <div class="rectangle"></div>
+
+            <div class="mainPart">
+
+                <p id="upperText">Lorem ipsum dolor sit amet...</p>
+                <div id="middleSquare"></div>
+                <p id="middleText">Duis consequat eros eget posuere ultricies...</p>
+                <p id="lowerText">Donec et viverra quam...</p>
+
+            </div>
+
+            <div class="rectangle"></div>
+
+        </div>
 
 
 
 
-        <div class="rectangle"></div>
 
-        <p id="upperText">Lorem ipsum dolor sit amet...</p>
-        <div id="middleSquare"></div>
-        <p id="middleText">Duis consequat eros eget posuere ultricies...</p>
-        <p id="lowerText">Donec et viverra quam...</p>
 
-        <div class="rectangle"></div>
 
     </div>
 </body>
