--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
 
             <div class="mainPart">
 
-                <p id="upperText">Lorem ipsum dolor sit amet...</p>
-                <div id="middleSquare"></div>
-                <p id="middleText">Duis consequat eros eget posuere ultricies...</p>
+                <p id="upperText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                
+                <div class="middleContent">
+                    <div id="middleSquare"></div>
+                    <p id="middleText">Duis consequat eros eget posuere ultricies. Curabitur auctor, justo ut facilisis eleifend, orci nisi aliquam eros, a interdum lorem purus vitae ex. Nullam sagittis urna et mi commodo, nec accumsan augue fermentum. Phasellus non lectus vel dolor dapibus feugiat. Ut ornare fermentum felis, ac vestibulum magna bibendum at. Donec at magna sed turpis sodales malesuada sit amet vel nulla</p>
+                </div>
+                
                 <p id="lowerText">Donec et viverra quam...</p>
 
             </div>
