add search container to html

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <div class="container">
 
         <div id="card1">
-
             <div class="square"></div>
-            <input type="search" placeholder="Search...." />
+            <div class="search-container">
+                <input type="search" placeholder="Search...">
+            </div>            
             <div id="rightSquare">
                 <div class="middle-line"></div>
             </div>
-
         </div>
-
+        
         <div id="card2">
 
             <div class="rectangle"></div>
