add span tag for the icon to index.html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <div id="card1">
             <div class="square"></div>
             <div class="search-container">
+                <span class="icon"></span>
                 <input type="search" placeholder="Search...">
-            </div>            
+            </div>          
             <div id="rightSquare">
                 <div class="middle-line"></div>
             </div>
